welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to 6) {
         ^Program:21: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estSurBiscuit()==true) {
  ^